2005-04-20 Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
   * FIX : Numerical exception on borland (cannot divide by 0, doh !)
	         But this is a case where we should really signify the user there is
					 few chance the serie is really a serie...

2005-04-20 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * FIX : on X, the python part is correctly installed. All files are 
     installed in gdcm sub-directory

2005-04-19 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * Builder/ : add something to facilitate the RPM creation of gdcm

2005-04-15 Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
   * Fix gdcmDirList::IsDirectory. Apparently borland did not like the ending
	 '/'
   * Also fix compilation on gcc 3.3.5 does not have ios::failure either ...

2005-04-11 Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
   * vtk/vtkGdcmWriter fix bug when writing spacing. The Y spacing comes first
	   then the X spacing.
	 * Fix compilation on gcc 2.96 (which does not have ios::failure)

2005-04-05 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * src/gdcmDictGroupName.[h|cxx] : add a correlation between a group (number)
     and it's representation name (for the NIH)

2005-03-31 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * src/gdcmPixelReadConvert.cxx : problems of around of double to uint8, when
     conversion of YBR to RGB pixels. So, now, the conversion is made using 
     integers only

2005-03-30 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * Testing/TestAllReadCompareDicom.cxx : now use test files (invented file
     format) to replace 'at-run' dicom files generated by the 
     TestAllReadCompareDicom test

2005-03-07 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * src/gdcmFileHelper.cxx : remove memory leaks and bugs when writing files

2005-02-22 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * src/gdcmFileHelper.cxx : JPR bad personal choices fix
